--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,33 +1,61 @@
 <div>
     <div class="top-search-section" style="margin-top:-40px;">
-        <div class="text-center">
-            <h3><i class="fas fa-calendar"></i>　ToDoリストを自動を作ってくれます
-            <br><small>※ 駄文</small></h3>
+        <div style="float:right;margin-right:70px;">
+            <h3>
+                <i class="fas fa-star-half"></i> みんな、知っています。
+                <br><span style="padding-left:60px;">やらかした後に見るあの青空を。</span>
             <br>
-            <a href="/templates/<%= (rand(13)+1).to_s %>" style="color:#eee;" class="btn btn-warning">登録する！</a>
+            <a href="#explanation-first" style="color:#eee;margin-left:84px;margin-top:8px;" class="btn btn-warning btn-sm">私も知っている！</a>
         </div>
     </div>
     <hr>
-    <div class="top-category-area text-left">
-        <div class="text-center"><h3><i class="fas fa-align-left"></i>　カテゴリーごと</h3></div>
-        <br><br>
-        <div class="row">
-            <% @templates.each do |template| %>
-            <div class="top-category-card col-sm-3">
-                <a href="/templates/<%= template.id %>" style="color:black;">
-                <h6 style="margin-left:20px;"><i class="fas fa-angle-double-right"></i>　<%= template.te_name %></h6>
-                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/common/image<%= template.id %>.png" width="90%" style="margin-left:5%">
-                </a>
+        <div class="text-center">
+            <div class="row" style="margin-top:20px;margin-bottom:40px;">
+                <div class="col-sm-6" style="margin-top:30px;">
+                    <h4 id="explanation-first" style="padding-top:20px"><i class="fas fa-heart-broken"></i>　やらかしをなくせます！</h4>
+                    <br>
+                    <p class="text-left" style="margin-left:23%;margin-top:10px;">
+                    私たちの周りには、<br>
+                    <strong>「<u>やらかしてはいけない場面</u>」</strong>があります<br><br>
+                    そんな「未来のやらかし」を未然に防ぐのが、<br>
+                    <strong style="font-size:30px;">＜サイト名＞</strong><br>
+                    です。
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/top/Top_Explanation1.jpg" style="height:340px;">
+                </div>
+                <div class="col-sm-6" style="margin-top:40px;">
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/top/Top_Explanation3.jpg" style="height:340px;">
+                </div>
+                <div class="col-sm-6" style="margin-top:80px;">
+                    <h4><i class="fas fa-expand"></i>　こうやって、やらかしをなくすよ！</h4>
+                    <br>
+                    <p class="text-left" style="margin-left:11%;margin-top:10px;margin-right:7%">
+                        あなたが＜サイト名＞ですることは、2つだけです。<br><br>
+                        　１：<strong>「<u>やらかしてはいけない用事</u>」と「<u>日程</u>」</strong>を選ぶこと。<br>
+                        　２：<strong>「<u>やらかし候補</u>」</strong>が近いか定期的に見ること。<br><br>
+                        <strong>「<u>やらかしてはいけない用事</u>」</strong>は、<a href="/templates/2" class="btn btn-sm btn-warning" style="color:white">結婚</a> から <a href="/templates/15" class="btn btn-info btn-sm" style="color:white;">経理業務</a> まで幅広く選べますよ！
+                    </p>
+                </div>
+                <div class="col-sm-6" style="margin-top:100px;">
+                    <h4><i class="fas fa-hashtag"></i>　あなたの助けになります！</h4>
+                    <br>
+                    <p class="text-left" style="margin-left:23%;margin-top:10px;">
+                        <strong><u>「やらかし候補」を潰すお手伝い - それがこのサイトの使命です！</u></strong><br>
+                        <strong><u>「やらかし」のない、パーフェクトの人生の始めましょう！</u></strong>
+                        <br><br>
+                        <a href="/templates" style="color:white;" class="btn btn-sm btn-warning">「やらかし」一覧を見る</a>
+                        <br><br>
+                        <small>※　加えて欲しい「やらかし」は、<a href="mailto:k-kazuya@coffee-cup.jp">こちらまで</a> 連絡を。</small>
+                    </p>
+                </div>
+                <div class="col-sm-6" style="margin-top:40px;">
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/top/Top_Explanation2.jpg" style="height:340px;">
+                </div>
             </div>
-            <% end %>
         </div>
-    </div>
-    <hr>
-        <div class="text-center">
-            <h3><i class="fas fa-thumbs-up"></i>　こんな利点がある！</h3>
-            <br>
-            <p>trelloみたいな感じ？　使い方の説明も見せたいが・・・</p>
-        </div>
+    <br>
     <hr>
     <div style="margin:30px 30px;">
         <div class="explanation-area">
@@ -35,34 +63,34 @@
             <br><br>
             <div class="row text-center">
                 <div class="col-sm-6">
-                    <h5>１：タスク管理するカテゴリーを選びましょう。</h5>
+                    <h5>１：「忘れたらヤバイ！！！」カテゴリーを選びましょう。</h5>
                     <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_1.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                     <br><br><br>
                 </div>
                 <div class="col-sm-6">
-                    <h5>２：タスク管理をしたい内容を選びましょう。</h5>
+                    <h5>２：「忘れたらヤバイ！！！」内容を選びましょう。</h5>
                     <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_2.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                     <br><br><br>
                 </div>
                 <div class="col-sm-6">
-                    <h5>３：タスクが自動生成されます。</h5>
+                    <h5>３：「ヤバイ！！！」を回避するためのタスクが自動生成されます。</h5>
                     <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_3.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                     <br>
                     日程は用途に合わせて調整できます。
                     <br><br><br>
                 </div>
                 <div class="col-sm-6">
-                    <h5>４：ログイン情報をメモしましょう</h5>
+                    <h5>４：登録されました。ログイン情報をメモしましょう</h5>
                     <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_4.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                     <br><br><br>
                 </div>
                 <div class="col-sm-6">
-                    <h5>５：みんなでスケジュールを管理しましょう！</h5>
+                    <h5>５：定期的に見て、地雷回避を目指しましょうね！</h5>
                     <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_5.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                     <br><br><br>
                 </div>
                 <div class="col-sm-6">
-                    <h5>！　参考になるページを表示しますよ</h5>
+                    <h5>！　参考になるページも、表示しますよ！</h5>
                     <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_6.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                     <br><br>
                 </div>
