--- a/app/assets/stylesheets/style.scss.css
+++ b/app/assets/stylesheets/style.scss.css
@@ -6,6 +6,22 @@
 
 /* top page */
 
+.top-header-section{
+  min-height:700px;
+  padding-top:190px;
+  background-image: url('https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/common/TopHeaderImage2.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 700px;
+  width:100%;
+  color:black;
+}
+
+.top-product-section{
+  padding:40px 0px 30px 60px;;
+  min-height:300px;
+  background-color:rgb(244, 244, 244, 0.7);
+}
+
 .top-search-section{
   min-height:400px;
   padding-top:210px;
