--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,19 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#4682b4;color:white;">
-  <% if role_signed_in? then %>
-    <a href="/" class="navbar-brand" style="color:rgb(234, 234, 234,1); href="/works/<%= current_role.workurl %>">Taskuri（というドメイン名） - <%= Work.find(current_role.work_id).w_name %> - </a>
-  <% else %>
-    <a href="/" class="navbar-brand" style="color:rgb(234, 234, 234,1);" href="/top">Taskuri（というドメイン名）</a>
-  <% end %>
+  <h1>
+    <% if role_signed_in? then %>
+      <a href="/" class="navbar-brand" style="color:rgb(234, 234, 234,1);" href="/works/<%= current_role.workurl %>">Taskuri（というドメイン名） - <%= Work.find(current_role.work_id).w_name %> - </a>
+    <% else %>
+      <a href="/" class="navbar-brand" style="color:rgb(234, 234, 234,1);" href="/top">Taskuri（というドメイン名）</a>
+    <% end %>
+  </h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-          <a class="nav-link" href="/templates">「やらかし」場面一覧</a>
+          <a class="nav-link" href="/templates_category">「やらかす」場面一覧</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/templates_category">「やらかし」カテゴリー一覧</a>
+          <a class="nav-link" href="/templates">「やらかす」カテゴリー一覧</a>
       </li>
       <% if @work != nil %>
         <li class="nav-item">
