--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,43 @@
 <div>
-    <div class="top-search-section" style="margin-top:-40px;">
+    <div class="top-header-section" style="margin-top:-35px;">
+        <div style="padding-left:8.7%;">
+            <h3 style="font-height:24px;line-height:48px;color:#444;margin-bottom:44px">いつも毎日、<br>考えているのは、<br>あなたの「やらかし」。</h3>
+            <a href="/works/new" class="btn btn-sm btn-danger" style="margin-top:8px;color:white;"><i class="fas fa-chevron-right"></i>　「やらかし」を登録する　</a>
+            <br>
+            <a href="/templates_category" class="btn btn-sm btn-info" style="margin-top:8px;color:white;"><i class="fas fa-chevron-right"></i>　「やらかす」場面を選ぶ　</a>
+            <br>
+            <a href="/templates" class="btn btn-sm btn-success" style="margin-top:8px;"><i class="fas fa-chevron-right"></i>　「やらかす」カテゴリーを選ぶ　</a>
+        </div>
+    </div>
+    <div class="top-word-section" style="padding-top:2.4px;">
+        <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/top/ForgetWord.jpg" width="100%">
+    </div>
+    <div class="top-product-section" style="margin-bottom:14px;">
+        <div class="row">
+            <div class="col-sm-5" style="padding-top:40px;padding-left:14px;">
+                <h3 style="font-size:23px"><i class="fas fa-file"></i>　「やらかし」を、管理しよう</h3>
+                <br>
+                <div style="margin-left:3px;line-height:34px;">
+                    <p>
+                    ＜「やらかし」防止するための現状の方法を書き出す＞
+                    <br><br>
+                   ＜サイト名＞を使えば、 「やらかし」を予防する、あなたがするべきことは<strong><u> 2つ </u></strong>だけです。
+                    <br><br>
+                        <ol>
+                            <li>「やらかし」そうな用事と「日程」を登録</li>
+                            <li>「やらかし」そうな用事が近づいているか確認</li>
+                        </ol>
+                    <br>
+                    「やらかし」そうな用事に関係するタスクを自動で生成して、知らせてくれるから管理が楽になるよ。
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-7" style="padding-top:87px;">
+                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/UsageImage1-min.png" style="width:95%;filter: drop-shadow(14px 14px 14px rgba(0,0,0,0.6));">
+            </div>
+        </div>
+    </div>
+    <div class="top-search-section">
         <div style="float:right;margin-right:70px;">
             <h3>
                 <i class="fas fa-star-half"></i> みんな、知っています。
@@ -8,7 +46,7 @@
             <a href="#explanation-first" style="color:#eee;margin-left:84px;margin-top:8px;" class="btn btn-warning btn-sm">私も知っている！</a>
         </div>
     </div>
-    <hr>
+    <br>
         <div class="text-center">
             <div class="row" style="margin-top:20px;margin-bottom:40px;">
                 <div class="col-sm-6" style="margin-top:30px;">
