--- a/app/assets/stylesheets/style.scss.css
+++ b/app/assets/stylesheets/style.scss.css
@@ -19,7 +19,7 @@
 .top-product-section{
   padding:40px 0px 30px 60px;;
   min-height:300px;
-  background-color:rgb(244, 244, 244, 0.7);
+  background-color:rgb(244, 244, 244);
 }
 
 .top-search-section{
