--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -14,8 +14,8 @@
     </div>
     <div class="top-product-section" style="margin-bottom:14px;">
         <div class="row">
-            <div class="col-sm-5" style="padding-top:40px;padding-left:14px;">
-                <h3 style="font-size:23px"><i class="fas fa-file"></i>　「やらかし」を、管理しよう</h3>
+            <div class="col-sm-5" style="padding-top:20px;padding-left:14px;">
+                <h3 style="font-size:23px;margin-bottom:21px;"><i class="fas fa-file"></i>　「やらかし」を、管理しよう</h3>
                 <br>
                 <div style="margin-left:3px;line-height:34px;">
                     <p>
