fix top design3

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -21,12 +21,18 @@
                     <p>
                     ＜「やらかし」防止するための現状の方法を書き出す＞
                     <br><br>
-                   ＜サイト名＞を使えば、 「やらかし」を予防する、あなたがするべきことは<strong><u> 2つ </u></strong>だけです。
-                    <br><br>
-                        <ol>
+                   ＜サイト名＞で<strong style="font-size:24px;"><u> 2つ </u></strong>のことをするだけで、「やらかし」を予防できます。
+                        <ol style="padding:14px 44px 0px 44px;">
                             <li>「やらかし」そうな用事と「日程」を登録</li>
                             <li>「やらかし」そうな用事が近づいているか確認</li>
                         </ol>
+                    <div class="top-product-button-group" style="padding-left:54px;">
+                        <a href="/works/new" class="btn btn-sm btn-danger" style="margin-top:8px;color:white;"><i class="fas fa-chevron-right"></i>　「やらかし」を登録する　</a>
+                        <br>
+                        <a href="/templates_category" class="btn btn-sm btn-info" style="margin-top:8px;color:white;"><i class="fas fa-chevron-right"></i>　「やらかす」場面を選ぶ　</a>
+                        <br>
+                        <a href="/templates" class="btn btn-sm btn-success" style="margin-top:8px;"><i class="fas fa-chevron-right"></i>　「やらかす」カテゴリーを選ぶ　</a>
+                    </div>
                     <br>
                     「やらかし」そうな用事に関係するタスクを自動で生成して、知らせてくれるから管理が楽になるよ。
                     </p>
