--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -28,7 +28,7 @@
                         <a class="btn btn-success" href="javascript:zoomIn()">拡大する</a>　<a href="javascript:zoomOut()" class="btn btn-info">縮小する</a>
                         </p>
                         <br>
-                        <div id="gantt_here" style='width:90%; height:400px;margin-bottom:30px;'></div>
+                        <div id="gantt_here" style='width:100%; height:400px;margin-bottom:30px;'></div>
                         <script>
                             var tasks = {
                                 data:[
@@ -192,11 +192,10 @@
                     <% end %>
                 </div>
                 <div class="text-center" style="margin:0 auto;">
-                    <%= f.submit "スケジュール作成する", :class => "btn btn-warning btn-lg", :style => "color:white;margin-left:-50px;" %>
+                    <button type="button" onclick="modalZoom()" class="btn btn-warning btn-lg" style="margin-top:14px;margin-left:-50px;color:white;" data-toggle="modal" data-target="#testModal">スケジュールを作成する</button>
                 </div>
                 <br>
             </div>
-        <% end %>
         <hr>
         <div id="search-plan2" style="margin:40px 10px;">
             <% t_start_date = Date.new; t_end_date = Date.new; t_diff_date = Date.new %>
@@ -257,6 +256,28 @@
     </div>
 </div>
 
+<div class="modal" id="testModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title">作成してもいいですか？</h5>
+            <button type="button" onclick="modalUnZoom()" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                <label>メールアドレスを入力して下さい</label>
+                <%= f.email_field :email, :class => "form-control", :style => "width:300px;margin-bottom:14px;" %>
+                <%= f.submit "スケジュール作成する", :class => "btn btn-success", :style => "color:white;" %>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" class="close" data-dismiss="modal" onclick="modalUnZoom()">閉じる</button>
+            </div>
+        </div>
+    </div>
+</div>              
+<% end %>
+
 <script type="text/javascript">
 
     // フォームの変化を把握
@@ -269,6 +290,13 @@
         //
     });
 
-    var new_list_item = 1;
+    // Modal 変更
+    function modalZoom(){
+        $("body").css("zoom", "100%");
+    }
+    function modalUnZoom(){
+        $("body").css("zoom", "87%");
+    }
+
 
 </script>
