--- a/app/views/works/welcome.html.erb
+++ b/app/views/works/welcome.html.erb
@@ -22,5 +22,5 @@
     </tr>
     </table>
     <br>
-    <a href="/works/<%= current_role.workurl %>" class="btn btn-primary">始める</a>
+    <a href="/roles/<%= current_role.id %>" class="btn btn-primary">始める</a>
 </div>
