--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -22,6 +22,15 @@
                     </div>
                 <% end %>
                 <div class="col-sm-3">
+                    <a href="/templates">
+                    <div style="background-color:#afeeee;width:90%;">
+                        <p style="color:white;padding:27% 10% 27% 5%;">
+                            <small>「やらかし」を探す</small>
+                        </p>
+                    </div>
+                    </a>
+                </div>
+                <div class="col-sm-3">
                     <a href="/works/new">
                     <div style="background-color:#b0c4de;width:90%;">
                         <p style="color:white;padding:27% 10% 27% 5%;">
@@ -44,7 +53,7 @@
                         <div class="list-group">
                         <% @today_tasks[0..4].each do |t_task| %>
                             <a href="/tasks/<%= t_task.id %>" class="list-group-item">
-                                <span class="btn btn-sm btn-info"><%= t_task.work.w_name %></span>
+                                <span class="btn btn-sm btn-info" style="margin-bottom:10px;"><%= t_task.work.w_name %></span>　<span class="btn btn-sm btn-<%= t_task.task_status[1] %>" style="color:white;float:right;"><%= t_task.task_status[0] %></span>
                                 <br>
                                 <span style="padding-top:10px;margin-left:10px;"><%= t_task.t_name %></span>
                             </a>
@@ -61,7 +70,7 @@
                     <% else %>
                         <% @tomorrow_tasks[0..4].each do |t_task| %>
                             <a href="/tasks/<%= t_task.id %>" class="list-group-item">
-                                <span class="btn btn-sm btn-info"><%= t_task.work.w_name %></span>
+                                <span class="btn btn-sm btn-info" style="margin-bottom:10px;"><%= t_task.work.w_name %></span>　<span class="btn btn-sm btn-<%= t_task.task_status[1] %>" style="color:white;float:right;"><%= t_task.task_status[0] %></span>
                                 <br>
                                 <span style="padding-top:10px;margin-left:10px;"><%= t_task.t_name %></span>
                             </a>
@@ -77,7 +86,7 @@
                     <% else %>
                         <% @this_week_tasks[0..4].each do |t_task| %>
                             <a href="/tasks/<%= t_task.id %>" class="list-group-item">
-                                <span class="btn btn-sm btn-info"><%= t_task.work.w_name %></span>
+                                <span class="btn btn-sm btn-info" style="margin-bottom:10px;"><%= t_task.work.w_name %></span>　<span class="btn btn-sm btn-<%= t_task.task_status[1] %>" style="color:white;float:right;"><%= t_task.task_status[0] %></span>
                                 <br>
                                 <span style="padding-top:10px;margin-left:10px;"><%= t_task.t_name %></span>
                             </a>
@@ -93,7 +102,7 @@
                     <% else %>
                         <% @this_month_tasks[0..4].each do |t_task| %>
                             <a href="/tasks/<%= t_task.id %>" class="list-group-item">
-                                <span class="btn btn-sm btn-info"><%= t_task.work.w_name %></span>
+                                <span class="btn btn-sm btn-info" style="margin-bottom:10px;"><%= t_task.work.w_name %></span>　<span class="btn btn-sm btn-<%= t_task.task_status[1] %>" style="color:white;float:right;"><%= t_task.task_status[0] %></span>
                                 <br>
                                 <span style="padding-top:10px;margin-left:10px;"><%= t_task.t_name %></span>
                             </a>
