--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -6,7 +6,7 @@
         <ul class="nav flex-column nav-pills nav-stacked">
             <% @templates.each do |template| %>
                 <% if template.te_work_names.split(",").include?(params["schedule-type"]) %>
-                    <li class="nav-item"><a class="nav-link active" href="/templaes/<%= template.id %>"><%= template.te_name %></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/templates/<%= template.id %>"><%= template.te_name %></a></li>
                 <% else %>
                     <li class="nav-item"><a class="nav-link" href="/templates/<%= template.id %>"><%= template.te_name %></a></li>
                 <% end %>
