--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -14,6 +14,7 @@
     <% if @parent_task != nil then %>
         <br>
         <span style="margin-top:7px;margin-left:33px;">
+            <% #どこにタイマー入れようか？ %>
             <% if current_role.is_line_friend == true then %>
                 <span class="btn btn-sm btn-warning" style="color:white;"><%= @task.line_push_date %>にLine通知</span>
             <% end %>
@@ -24,35 +25,115 @@
     <hr>
     <div class="row">
         <div class="col-sm-8">
-            <span style="margin-top:20px;">
-                <i class="fas fa-clock"></i>　<a class="btn btn-light" id="time-text" href="javascript:create_input('#time-text')" style="background-color:#eee;" href=""><%= @task.start_date %>〜<%= @task.end_date %></a>
-                <span id="time-text-input" style="display:none;">
-                <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
-                    <%= f.date_field :start_date, :class => "form-control", :style => "width:180px;display:inline-block;" %> 〜 <%= f.date_field :end_date, :class => "form-control", :style => "width:180px;display:inline-block;" %>
-                    <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
-                <% end %>
+            <div class="">
+                <span style="margin-top:20px;">
+                    <% # ここの Checklist の JSON 確認の条件分岐考える %>
+                    <div class="to-do-section" style="margin-bottom:17px;">
+                        <p><i class="fas fa-check"></i>　予定のToDo</p>
+                        <!-- 案1 
+                        <div style="padding-left:30px;">
+                            <ul class="nav nav-tabs">
+                                <li class="nav-item"><a href="javascript:" class="nav-link active">学習の全体像</a></li>
+                                <li class="nav-item"><a href="javascript:" class="nav-link">今日のタスク</a></li>
+                                <li class="nav-item"><a href="javascript:" class="nav-link">挫折しないために</a></li>
+                                <li class="nav-item"><a href="javascript:" class="nav-link">心得</a></li>
+                            </ul>
+                            <div class="jumbotron" style="padding:30px">
+                                <div class="">
+                                <p style="margin-bottom:0">
+                                <a style="color:white" class="btn btn-sm btn-success"><i class="fas fa-chevron-right"></i>　Progate HTML/CSS 1〜3 を始める</a>
+                                </p>
+                                </div>
+                            </div>
+                        </div>
+                         案2 -->
+                        <div style="padding-left:30px;">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="card border-info" style="height:200px;margin-bottom:20px;">
+                                        <div class="card-header">
+                                            今日のタスク
+                                            <div style="float:right">
+                                            <% if @task.done == false %>
+                                                <a id="task<%= @task.id %>" class="btn btn-success btn-sm" style="display:none;width:100px;color:white;display:none"><%= @task.task_status[0] %></a>
+                                                <%= button_to @task.task_status[0], done_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]} btn-sm", :id => "task-not-yet"%>
+                                            <% elsif @task.done == true %>
+                                                <a id="task<%= @task.id %>" class="btn btn-danger btn-sm" style="display:none;width:100px;color:white;display:none">未完了</a>
+                                                <%= button_to @task.task_status[0], undone_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]} btn-sm", :id => "task-not-yet"%>
+                                            <% end %>
+                                            </div>
+                                        </div>
+                                        <div class="card-body text-primary">
+                                            Progate 1〜3 HTML/CSS
+                                            <br>
+                                            <a style="color:white;margin-top:10px;margin-bottom:10px;" class="btn btn-sm btn-warning"><i class="fas fa-arrow-right"></i>　学習する</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="card border-info" style="height:200px;margin-bottom:10px;">
+                                        <div class="card-header">学習の全体像</div>
+                                        <div class="card-body text-primary">
+                                            ホームページの仕組み
+                                            <br>
+                                            <a style="color:white;margin-top:10px;" class="btn btn-sm btn-warning"><i class="fas fa-arrow-right"></i>　見てみる</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="card border-info" style="height:200px;margin-bottom:20px;">
+                                        <div class="card-header">挫折しないために</div>
+                                        <div class="card-body text-primary">
+                                            Menta を登録しましょう。1日の食費で1ヶ月聞き放題です。<br><a style="color:white;" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i>　登録</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="card border-info" style="height:200px;margin-bottom:20px;">
+                                        <div class="card-header">心得</div>
+                                        <div class="card-body text-primary">
+                                            <ol>
+                                                <li>理解しなくても動けばいい</li>
+                                                <li>とりあえず動かして動くか試す</li>
+                                                <li>分からないことは理解しなくていい</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <% # %>
+                    <i class="fas fa-clock"></i>　<a class="btn btn-light" id="time-text" href="javascript:create_input('#time-text')" style="background-color:#eee;" href=""><%= @task.start_date %>〜<%= @task.end_date %></a>
+                    <span id="time-text-input" style="display:none;">
+                    <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
+                        <%= f.date_field :start_date, :class => "form-control", :style => "width:180px;display:inline-block;" %> 〜 <%= f.date_field :end_date, :class => "form-control", :style => "width:180px;display:inline-block;" %>
+                        <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
+                    <% end %>
+                    </span>
+                    <br><br>
+                    <i class="fas fa-user-circle"></i>　<a class="btn btn-light" id="role-text" href="javascript:create_input('#role-text')" style="background-color:#eee;"><%= @task.role %></a></span>
+                    <span id="role-text-input" style="display:none;">
+                    <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
+                        <%= f.text_field :role, :class => "form-control", :style => "width:180px;display:inline-block;" %>
+                        <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
+                    <% end %>
+                    </span>
+                    <br><br>
+                    <% #どこにタイマー入れようか？ %>
+                    <i class="fas fa-clipboard-list"></i>　
+                    <% if @task.done == false %>
+                        <a id="task<%= @task.id %>" class="btn btn-success" style="display:none;width:100px;color:white;display:none"><%= @task.task_status[0] %></a>
+                        <%= button_to @task.task_status[0], done_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
+                    <% elsif @task.done == true %>
+                        <a id="task<%= @task.id %>" class="btn btn-danger" style="display:none;width:100px;color:white;display:none">未完了</a>
+                        <%= button_to @task.task_status[0], undone_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
+                    <% end %>
+                    <div class="schedule-detail-section">
+                        <i class="fas fa-stopwatch" style="margin-left:-30px;"></i><p id="sd-days" style="display:inline-block;text-align:left;margin-top:10px;margin-left:20px;"></p>
+                    </div>
                 </span>
-                <br><br>
-                <i class="fas fa-user-circle"></i>　<a class="btn btn-light" id="role-text" href="javascript:create_input('#role-text')" style="background-color:#eee;"><%= @task.role %></a></span>
-                <span id="role-text-input" style="display:none;">
-                <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
-                    <%= f.text_field :role, :class => "form-control", :style => "width:180px;display:inline-block;" %>
-                    <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
-                <% end %>
-                </span>
-                <br><br>
-                <i class="fas fa-clipboard-list"></i>　
-                <% if @task.done == false %>
-                    <a id="task<%= @task.id %>" class="btn btn-success" style="display:none;width:100px;color:white;display:none"><%= @task.task_status[0] %></a>
-                    <%= button_to @task.task_status[0], done_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
-                <% elsif @task.done == true %>
-                    <a id="task<%= @task.id %>" class="btn btn-danger" style="display:none;width:100px;color:white;display:none">未完了</a>
-                    <%= button_to @task.task_status[0], undone_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
-                <% end %>
-                <div class="schedule-detail-section">
-                    <i class="fas fa-stopwatch" style="margin-left:-30px;"></i><p id="sd-days" style="display:inline-block;text-align:left;margin-top:10px;margin-left:20px;"></p>
-                </div>
-            </span>
+            </div>
             <div class="generate-checklist-section" style="margin-top:20px;">
                 <p><i class="fas fa-pen"></i>　チェックリスト</p>
                 <div id="checklist-inner">
@@ -61,7 +142,7 @@
                             <div id="checklist-<%= check_l.id %>">
                                 <p style="width:90%;margin-bottom:0px;" class="checklist-item" onclick="javascript:showUpdateChecklistForm(<%= check_l.id %>)">
                                     <input type="checkbox" id="checklist-show-<%= check_l.id %>-checked" <% if check_l.checked == true %> checked <% end %>>　
-                                    <span style="<% if check_l.checked == true %> text-decoration:line-through; <% end %>"><%= check_l.c_name %></span>
+                                    <span class="checklist-show-span" style="<% if check_l.checked == true %> text-decoration:line-through; <% end %>"><%= check_l.c_name.html_safe %></span>
                                 </p>
                             </div>
                             <div id="checklist-form-<%= check_l.id %>" style="display:none;">
